un peu d'esthétique sur l'entête des onglets

--- a/style/css/firefox_fx-min.css
+++ b/style/css/firefox_fx-min.css
@@ -2370,3 +2370,7 @@ a.mozilla-video-control-overlay {
 
 .mozilla-video-player-content .video-download-links a, .mozilla-video-player-content .video-download-links a:link, .mozilla-video-player-content .video-download-links a:hover {
   color: #888; }
+.tab {
+  outline:none !important;
+  text-decoration:none !important;
+}
